# echo-lab

./: AGENTS.md  README.md  pyproject.toml
docs/: benchmark_spec.md  commands.md  plugin_architecture.md  raspberry_pi_quickstart.md
src/echolab/: __init__.py  __main__.py  cli.py
src/echolab/analysis/: __init__.py  audio_quality.py  channels.py
src/echolab/benchmark/: __init__.py  models.py  placement.py  wake_asr.py
src/echolab/devices/: __init__.py  alsa.py  base.py
src/echolab/plugins/: __init__.py  base.py  command.py
src/echolab/reporting/: __init__.py  exporters.py
src/echolab/visualization/: __init__.py
tests/: test_alsa_inspect.py  test_audio_quality.py  test_channels.py  test_cli.py  test_placement.py  test_plugins.py  test_reporting.py  test_wake_asr.py
