[project]
name = "echo-lab"
version = "0.1.0"
description = "Reusable audio input benchmarking toolkit for voice AI systems."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
echolab = "echolab.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
